# steering-bench

./: .gitignore  README.md  profile_cuda.sh  pyproject.toml
docs/: OVERVIEW.md  design.md  performance.md  plan.md  roadmap.md
docs/features/: ablation_benchmarks.md  analysis.md  capture_consumers.md  core.md  external_comparison.md  micro_benchmarks.md  vllm_benchmarks.md
scripts/: analyze.py  bench_capture_e2e.py  bench_capture_filesystem.py  bench_capture_latency.py  bench_capture_manager.py  bench_capture_plugin_work.py  bench_config_scaling.py  bench_cuda_graphs.py  bench_external.py  bench_hook_points.py  bench_index_building.py  bench_latency.py  bench_max_tokens.py  bench_memory.py  bench_mixed_batch.py  bench_serving.py  bench_steering_manager.py  bench_steering_op.py  bench_table_sizing.py  bench_throughput.py  bench_throughput_matrix.py  compare_throughput.py  migrate_throughput_keys.py  nsys_target.py  profile_steering.py  run_h100.sh  verify_correctness.py
src/steering_bench/: output.py  timing.py  vectors.py
src/steering_bench/analysis/: aggregate.py
src/steering_bench/capture_consumers/: consumers.py  runner.py
